stencil/src/main/java/net/stencilproject/template/TemplateParser.java
// $ANTLR 3.4 /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g 2011-09-20 19:49:25
package net.stencilproject.template;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class TemplateParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "AS", "BLOCK", "BY", "COLON", "COMMA", "COMMENT", "CONTINUE", "DIV", "DOLLAR", "DOT", "DQUOTE", "ELIF", "ELSE", "END", "EQ", "EQEQ", "ESC_SEQ", "EXPONENT", "EXTENDS", "FALSE", "FLOAT", "FOR", "GT", "GTE", "HEX_DIGIT", "HEX_ESC", "IAND", "ID", "IF", "IN", "INCLUDE", "INT", "INT_HEX", "IOR", "JOIN", "LIMIT", "LIST", "LPAREN", "LSHIFT", "LSQUARE", "LT", "LTE", "MINUS", "MOD", "MUL", "NE", "NOT", "NULL", "OR", "ORDER", "PIPE", "PLUS", "PRINT", "QDOT", "QUESTION", "RPAREN", "RSHIFT", "RSQUARE", "SCOPE_LOOKUP", "SEMI", "SQUOTE", "STRING", "TEMPLATE_COMMENT", "TEMPLATE_LITERAL", "TEMPLATE_PRINT_END", "TEMPLATE_PRINT_START", "TEMPLATE_RAW", "TEMPLATE_STATEMENT_END", "TEMPLATE_STATEMENT_START", "TILDE", "TO", "TRUE", "UNARY_MINUS", "UNARY_PLUS", "UNICODE_ESC", "VAR", "WS", "XOR"
    };

    public static final int EOF=-1;
    public static final int AND=4;
    public static final int AS=5;
    public static final int BLOCK=6;
    public static final int BY=7;
    public static final int COLON=8;
    public static final int COMMA=9;
    public static final int COMMENT=10;
    public static final int CONTINUE=11;
    public static final int DIV=12;
    public static final int DOLLAR=13;
    public static final int DOT=14;
    public static final int DQUOTE=15;
    public static final int ELIF=16;
    public static final int ELSE=17;
    public static final int END=18;
    public static final int EQ=19;
    public static final int EQEQ=20;
    public static final int ESC_SEQ=21;
    public static final int EXPONENT=22;
    public static final int EXTENDS=23;
    public static final int FALSE=24;
    public static final int FLOAT=25;
    public static final int FOR=26;
    public static final int GT=27;
    public static final int GTE=28;
    public static final int HEX_DIGIT=29;
    public static final int HEX_ESC=30;
    public static final int IAND=31;
    public static final int ID=32;
    public static final int IF=33;
    public static final int IN=34;
    public static final int INCLUDE=35;
    public static final int INT=36;
    public static final int INT_HEX=37;
    public static final int IOR=38;
    public static final int JOIN=39;
    public static final int LIMIT=40;
    public static final int LIST=41;
    public static final int LPAREN=42;
    public static final int LSHIFT=43;
    public static final int LSQUARE=44;
    public static final int LT=45;
    public static final int LTE=46;
    public static final int MINUS=47;
    public static final int MOD=48;
    public static final int MUL=49;
    public static final int NE=50;
    public static final int NOT=51;
    public static final int NULL=52;
    public static final int OR=53;
    public static final int ORDER=54;
    public static final int PIPE=55;
    public static final int PLUS=56;
    public static final int PRINT=57;
    public static final int QDOT=58;
    public static final int QUESTION=59;
    public static final int RPAREN=60;
    public static final int RSHIFT=61;
    public static final int RSQUARE=62;
    public static final int SCOPE_LOOKUP=63;
    public static final int SEMI=64;
    public static final int SQUOTE=65;
    public static final int STRING=66;
    public static final int TEMPLATE_COMMENT=67;
    public static final int TEMPLATE_LITERAL=68;
    public static final int TEMPLATE_PRINT_END=69;
    public static final int TEMPLATE_PRINT_START=70;
    public static final int TEMPLATE_RAW=71;
    public static final int TEMPLATE_STATEMENT_END=72;
    public static final int TEMPLATE_STATEMENT_START=73;
    public static final int TILDE=74;
    public static final int TO=75;
    public static final int TRUE=76;
    public static final int UNARY_MINUS=77;
    public static final int UNARY_PLUS=78;
    public static final int UNICODE_ESC=79;
    public static final int VAR=80;
    public static final int WS=81;
    public static final int XOR=82;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public TemplateParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public TemplateParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return TemplateParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g"; }


    public static class id_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "id"
    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:156:1: id : ID ;
    public final TemplateParser.id_return id() throws RecognitionException {
        TemplateParser.id_return retval = new TemplateParser.id_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID1=null;

        Object ID1_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:157:2: ( ID )
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:157:4: ID
            {
            root_0 = (Object)adaptor.nil();


            ID1=(Token)match(input,ID,FOLLOW_ID_in_id1205); 
            ID1_tree = 
            (Object)adaptor.create(ID1)
            ;
            adaptor.addChild(root_0, ID1_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "id"


    public static class id_relaxed_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "id_relaxed"
    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:160:1: id_relaxed : ( ID | JOIN | ELSE | FOR | CONTINUE );
    public final TemplateParser.id_relaxed_return id_relaxed() throws RecognitionException {
        TemplateParser.id_relaxed_return retval = new TemplateParser.id_relaxed_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set2=null;

        Object set2_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:161:2: ( ID | JOIN | ELSE | FOR | CONTINUE )
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:
            {
            root_0 = (Object)adaptor.nil();


            set2=(Token)input.LT(1);

            if ( input.LA(1)==CONTINUE||input.LA(1)==ELSE||input.LA(1)==FOR||input.LA(1)==ID||input.LA(1)==JOIN ) {
                input.consume();
                adaptor.addChild(root_0, 
                (Object)adaptor.create(set2)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "id_relaxed"


    public static class string_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "string"
    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:163:1: string : STRING ;
    public final TemplateParser.string_return string() throws RecognitionException {
        TemplateParser.string_return retval = new TemplateParser.string_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token STRING3=null;

        Object STRING3_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:164:2: ( STRING )
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:164:4: STRING
            {
            root_0 = (Object)adaptor.nil();


            STRING3=(Token)match(input,STRING,FOLLOW_STRING_in_string1241); 
            STRING3_tree = 
            new StringNode(STRING3) 
            ;
            adaptor.addChild(root_0, STRING3_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "string"


    public static class template_literal_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "template_literal"
    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:167:1: template_literal : TEMPLATE_LITERAL ;
    public final TemplateParser.template_literal_return template_literal() throws RecognitionException {
        TemplateParser.template_literal_return retval = new TemplateParser.template_literal_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token TEMPLATE_LITERAL4=null;

        Object TEMPLATE_LITERAL4_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:168:2: ( TEMPLATE_LITERAL )
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:168:4: TEMPLATE_LITERAL
            {
            root_0 = (Object)adaptor.nil();


            TEMPLATE_LITERAL4=(Token)match(input,TEMPLATE_LITERAL,FOLLOW_TEMPLATE_LITERAL_in_template_literal1255); 
            TEMPLATE_LITERAL4_tree = 
            new TemplateLiteralNode(TEMPLATE_LITERAL4) 
            ;
            adaptor.addChild(root_0, TEMPLATE_LITERAL4_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "template_literal"


    public static class template_statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "template_statement"
    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:171:1: template_statement : TEMPLATE_STATEMENT_START ^ statements TEMPLATE_STATEMENT_END !;
    public final TemplateParser.template_statement_return template_statement() throws RecognitionException {
        TemplateParser.template_statement_return retval = new TemplateParser.template_statement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token TEMPLATE_STATEMENT_START5=null;
        Token TEMPLATE_STATEMENT_END7=null;
        TemplateParser.statements_return statements6 =null;


        Object TEMPLATE_STATEMENT_START5_tree=null;
        Object TEMPLATE_STATEMENT_END7_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:172:2: ( TEMPLATE_STATEMENT_START ^ statements TEMPLATE_STATEMENT_END !)
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:172:4: TEMPLATE_STATEMENT_START ^ statements TEMPLATE_STATEMENT_END !
            {
            root_0 = (Object)adaptor.nil();


            TEMPLATE_STATEMENT_START5=(Token)match(input,TEMPLATE_STATEMENT_START,FOLLOW_TEMPLATE_STATEMENT_START_in_template_statement1269); 
            TEMPLATE_STATEMENT_START5_tree = 
            (Object)adaptor.create(TEMPLATE_STATEMENT_START5)
            ;
            root_0 = (Object)adaptor.becomeRoot(TEMPLATE_STATEMENT_START5_tree, root_0);


            pushFollow(FOLLOW_statements_in_template_statement1272);
            statements6=statements();

            state._fsp--;

            adaptor.addChild(root_0, statements6.getTree());

            TEMPLATE_STATEMENT_END7=(Token)match(input,TEMPLATE_STATEMENT_END,FOLLOW_TEMPLATE_STATEMENT_END_in_template_statement1274); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "template_statement"


    public static class template_print_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "template_print"
    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:175:1: template_print : TEMPLATE_PRINT_START ^ expression ( COMMA ! expression )* TEMPLATE_PRINT_END !;
    public final TemplateParser.template_print_return template_print() throws RecognitionException {
        TemplateParser.template_print_return retval = new TemplateParser.template_print_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token TEMPLATE_PRINT_START8=null;
        Token COMMA10=null;
        Token TEMPLATE_PRINT_END12=null;
        TemplateParser.expression_return expression9 =null;

        TemplateParser.expression_return expression11 =null;


        Object TEMPLATE_PRINT_START8_tree=null;
        Object COMMA10_tree=null;
        Object TEMPLATE_PRINT_END12_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:176:2: ( TEMPLATE_PRINT_START ^ expression ( COMMA ! expression )* TEMPLATE_PRINT_END !)
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:176:4: TEMPLATE_PRINT_START ^ expression ( COMMA ! expression )* TEMPLATE_PRINT_END !
            {
            root_0 = (Object)adaptor.nil();


            TEMPLATE_PRINT_START8=(Token)match(input,TEMPLATE_PRINT_START,FOLLOW_TEMPLATE_PRINT_START_in_template_print1286); 
            TEMPLATE_PRINT_START8_tree = 
            (Object)adaptor.create(TEMPLATE_PRINT_START8)
            ;
            root_0 = (Object)adaptor.becomeRoot(TEMPLATE_PRINT_START8_tree, root_0);


            pushFollow(FOLLOW_expression_in_template_print1289);
            expression9=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression9.getTree());

            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:176:37: ( COMMA ! expression )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==COMMA) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:176:38: COMMA ! expression
            	    {
            	    COMMA10=(Token)match(input,COMMA,FOLLOW_COMMA_in_template_print1292); 

            	    pushFollow(FOLLOW_expression_in_template_print1295);
            	    expression11=expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, expression11.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            TEMPLATE_PRINT_END12=(Token)match(input,TEMPLATE_PRINT_END,FOLLOW_TEMPLATE_PRINT_END_in_template_print1299); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "template_print"


    public static class template_comment_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "template_comment"
    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:179:1: template_comment : TEMPLATE_COMMENT ;
    public final TemplateParser.template_comment_return template_comment() throws RecognitionException {
        TemplateParser.template_comment_return retval = new TemplateParser.template_comment_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token TEMPLATE_COMMENT13=null;

        Object TEMPLATE_COMMENT13_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:180:2: ( TEMPLATE_COMMENT )
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:180:4: TEMPLATE_COMMENT
            {
            root_0 = (Object)adaptor.nil();


            TEMPLATE_COMMENT13=(Token)match(input,TEMPLATE_COMMENT,FOLLOW_TEMPLATE_COMMENT_in_template_comment1312); 
            TEMPLATE_COMMENT13_tree = 
            (Object)adaptor.create(TEMPLATE_COMMENT13)
            ;
            adaptor.addChild(root_0, TEMPLATE_COMMENT13_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "template_comment"


    public static class template_raw_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "template_raw"
    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:183:1: template_raw : TEMPLATE_RAW ;
    public final TemplateParser.template_raw_return template_raw() throws RecognitionException {
        TemplateParser.template_raw_return retval = new TemplateParser.template_raw_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token TEMPLATE_RAW14=null;

        Object TEMPLATE_RAW14_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:184:2: ( TEMPLATE_RAW )
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:184:4: TEMPLATE_RAW
            {
            root_0 = (Object)adaptor.nil();


            TEMPLATE_RAW14=(Token)match(input,TEMPLATE_RAW,FOLLOW_TEMPLATE_RAW_in_template_raw1324); 
            TEMPLATE_RAW14_tree = 
            new TemplateRawNode(TEMPLATE_RAW14) 
            ;
            adaptor.addChild(root_0, TEMPLATE_RAW14_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "template_raw"


    public static class template_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "template"
    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:187:1: template : ( template_literal | template_statement | template_comment | template_raw | template_print )* EOF ;
    public final TemplateParser.template_return template() throws RecognitionException {
        TemplateParser.template_return retval = new TemplateParser.template_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF20=null;
        TemplateParser.template_literal_return template_literal15 =null;

        TemplateParser.template_statement_return template_statement16 =null;

        TemplateParser.template_comment_return template_comment17 =null;

        TemplateParser.template_raw_return template_raw18 =null;

        TemplateParser.template_print_return template_print19 =null;


        Object EOF20_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:188:2: ( ( template_literal | template_statement | template_comment | template_raw | template_print )* EOF )
            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:188:4: ( template_literal | template_statement | template_comment | template_raw | template_print )* EOF
            {
            root_0 = (Object)adaptor.nil();


            // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:188:4: ( template_literal | template_statement | template_comment | template_raw | template_print )*
            loop2:
            do {
                int alt2=6;
                switch ( input.LA(1) ) {
                case TEMPLATE_LITERAL:
                    {
                    alt2=1;
                    }
                    break;
                case TEMPLATE_STATEMENT_START:
                    {
                    alt2=2;
                    }
                    break;
                case TEMPLATE_COMMENT:
                    {
                    alt2=3;
                    }
                    break;
                case TEMPLATE_RAW:
                    {
                    alt2=4;
                    }
                    break;
                case TEMPLATE_PRINT_START:
                    {
                    alt2=5;
                    }
                    break;

                }

                switch (alt2) {
            	case 1 :
            	    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:188:5: template_literal
            	    {
            	    pushFollow(FOLLOW_template_literal_in_template1339);
            	    template_literal15=template_literal();

            	    state._fsp--;

            	    adaptor.addChild(root_0, template_literal15.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:189:4: template_statement
            	    {
            	    pushFollow(FOLLOW_template_statement_in_template1344);
            	    template_statement16=template_statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, template_statement16.getTree());

            	    }
            	    break;
            	case 3 :
            	    // /Users/matthew/Documents/twitrants/stencil-git/stencil/src/main/java/net/stencilproject/template/Template.g:190:4: template_comment
            	    {
            	    pushFollow(FOLLOW_template_comment_in_template1349);
            	    template_comment17=template_comment();

            	    state._fsp--;

            	    adaptor.addChild(root_0, template_comment17.getTree());
